# damn-reports

./: .gitignore  .npmrc  AGENTS.md  README.md  TODO.md  bump.config.ts  default.json  eslint.config.js  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  skills-manifest.json  tailwind.config.js  tailwind.theme.js  vite.config.ts
.github/workflows/: release.yml
patches/: bumpp.patch
prisma/: schema.prisma
scripts/: convert-icons-to-rgba.mjs
sidecar-app/n8n-process/: main.js  main.n8n.js  (+2 more)
src/: App.tsx  main.css  main.tsx  provider.tsx
tauri/: Cargo.toml  tauri.conf.json
tauri/capabilities/: default.json
tauri/icons/: icon.icns
tauri/prisma/: schema.prisma
tauri/prisma/migrations/20260117173215/: migration.sql
tauri/prisma/migrations/20260122130600/: migration.sql
tauri/src/: lib.rs  main.rs  n8n.rs
tauri/src/axum/: main.rs  mod.rs
tauri/src/axum/modules/record/: controller.rs  mod.rs  service.rs
tauri/src/axum/modules/report/: controller.rs  dtos.rs  service.rs
tauri/src/axum/routes/: mod.rs
tauri/src/axum/routes/record/: controller.rs  dtos.rs  mod.rs  service.rs
tauri/src/axum/routes/report/: controller.rs  dtos.rs  mod.rs  service.rs
tauri/src/bridge/: cmd.rs
tauri/src/bridge/server/: mod.rs  router.rs
tauri/src/bridge/server/routes/: mod.rs
tauri/src/bridge/server/routes/record/: controller.rs  dtos.rs  mod.rs  service.rs
tauri/src/bridge/server/routes/report/: controller.rs  dtos.rs  mod.rs  service.rs
tauri/src/bridge/server/utils/: mod.rs
tauri/src/collector/: clickup.rs  git.rs
tauri/src/command/: mod.rs
tauri/src/config/: constants.rs  format.rs  mod.rs  runtime.rs  setting.rs  utils.rs
tauri/src/core/config/: mod.rs
tauri/src/core/db/: connection.rs
tauri/src/core/db/entities/: mod.rs  prelude.rs  report.rs  workspace.rs
tauri/src/core/utils/: mod.rs
tauri/src/database/: connection.rs  migration.rs  mod.rs
tauri/src/database/entities/: mod.rs  prelude.rs  record.rs  report.rs  source.rs  workflow.rs
tauri/src/logger/: mod.rs
tauri/src/n8n/: mod.rs  start_n8n_dev.rs  status.rs  utils.rs
tauri/src/schedule/: mod.rs  start.rs
tauri/src/schedule/service/: call_n8n_workflow_webhook.rs  collect_records_of_source.rs
tauri/src/schedule/tasks/collect_records_of_source/: config.rs  mod.rs  traits.rs
tauri/src/schedule/utils/: mod.rs
tauri/src/service/: mod.rs
tauri/src/service/collector/: clickup.rs  git.rs
tauri/src/service/download/: core.rs  extractor.rs  installable.rs  mod.rs  progress.rs  utils.rs
tauri/src/service/scheduler/: mod.rs
tauri/src/service/workflow/: mod.rs  status.rs  utils.rs
tauri/src/services/: mod.rs
tauri/src/services/collector/: clickup.rs  git.rs  mod.rs
tauri/src/services/download/: core.rs  extractor.rs  installable.rs  mod.rs  models.rs  progress.rs  utils.rs
tauri/src/services/scheduler/: mod.rs
tauri/src/services/scheduler/task/call_n8n_workflow_webhook/: mod.rs
tauri/src/services/scheduler/task/collect_records_of_source/: mod.rs  traits.rs  utils.rs
tauri/src/services/scheduler/task/tick_check_n8n_process/: mod.rs
tauri/src/services/workflow/: mod.rs  status.rs  utils.rs
tauri/src/task/: mod.rs
tauri/src/task/call_n8n_workflow_webhook/: mod.rs
tauri/src/task/collect_records_of_source/: config.rs  mod.rs  traits.rs  utils.rs
tauri/src/task/tick_check_n8n_process/: mod.rs
tauri/src/utils/: mod.rs
tauri/static/: icon.icns
(+113 files in other folders)
