[package]
name = "damn-daily-reports"
version = "0.1.8"
description = "A Tauri App"
authors = [ "Hairy" ]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "main"
crate-type = [
  "staticlib",
  "cdylib",
  "rlib"
]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [
  "tray-icon",
  "image-png"
] }
tauri-plugin-http = "2.5.6"
tauri-plugin-process = "2.0.0"
tauri-plugin-opener = "2"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
tauri-plugin-notification = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2"
reqwest = { version = "0.12", features = [ "json", "stream", "native-tls-vendored" ] }
git2 = { version = "0.18", default-features = false, features = [ "https", "vendored-openssl" ] }
chrono = { version = "0.4", features = [ "serde" ] }
uuid = { version = "1.0", features = [ "v4" ] }
axum = "0.7"
tokio = { version = "1.0", features = [ "full" ] }
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "sqlite",
  "chrono"
] }
tower-http = { version = "0.5", features = [ "cors" ] } # 如果需要处理跨域
sea-orm = { version = "1.1.19", features = [
  "sqlx-sqlite",
  "macros"
] }
zip = "0.6"
futures-util = "0.3"
flate2 = "1.1.8"
tar = "0.4.44"
sha2 = "0.10"
async-trait = "0.1.89"
log = "0.4"

[dependencies.tauri-plugin-sql]
features = [ "sqlite" ] # or "postgres", or "mysql"
version = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
